Creado mediante Colaboratory

--- a/tablas_distribucion_frecuencia_funcion.ipynb
+++ b/tablas_distribucion_frecuencia_funcion.ipynb
@@ -6,7 +6,7 @@
       "name": "tablas_distribucion_frecuencia_funcion",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM+3NOaH+kc+Dle3VRBZQ/9",
+      "authorship_tag": "ABX9TyPxulh+szEy6/jKc+jg+yC2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "r-GAgqzXmFQ4"
       },
@@ -56,9 +56,9 @@
           "height": 175
         },
         "id": "vHbN0fjYmRDd",
-        "outputId": "3edbf6c7-7b78-458f-b5df-696214d88f5f"
+        "outputId": "2e0715f9-3e9e-4d4e-9d97-8453a9b6b196"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -187,7 +187,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 2
         }
       ]
     },
@@ -208,7 +208,7 @@
       "metadata": {
         "id": "Zn-QZBQcmUKE"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -222,9 +222,9 @@
           "height": 206
         },
         "id": "g5eHR5UaOYKY",
-        "outputId": "800131af-7372-4787-ca63-c430f6f3daa7"
+        "outputId": "09a8de80-b5aa-4d9b-b108-c059860bc12c"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -304,7 +304,52 @@
             ]
           },
           "metadata": {},
-          "execution_count": 145
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Poner el porcentaje para una variable\n",
+        "def var_por(dataFrame,variable):\n",
+        "  #import pandas as pd\n",
+        "  tab_frec=pd.crosstab(index=dataFrame[variable], columns=\"Conteo\")\n",
+        "  tab_frec[\"porcentaje\"]=tab_frec/tab_frec.sum()*100\n",
+        "    \n",
+        "  print(tab_frec.round(1))\n",
+        "  print(\"Totales   \", dataFrame[variable].count(), \"       100%\")"
+      ],
+      "metadata": {
+        "id": "MWjptAGZjTEp"
+      },
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "var_por(titanic,\"sex\") #Poner el porcentaje para una variable"
+      ],
+      "metadata": {
+        "id": "8VajrpeOkADo",
+        "outputId": "cb66b1d2-5cec-499f-b4a3-a506969902fe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "col_0   Conteo  porcentaje\n",
+            "sex                       \n",
+            "female     314        35.2\n",
+            "male       577        64.8\n",
+            "Totales    891        100%\n"
+          ]
         }
       ]
     },
@@ -347,7 +392,7 @@
       "metadata": {
         "id": "H246vOcURuVx"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -361,7 +406,7 @@
       "metadata": {
         "id": "ynly7LIDr7ei"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -375,9 +420,9 @@
           "height": 206
         },
         "id": "IjxEJmN4s3ao",
-        "outputId": "63239186-b599-4ed3-a577-73a63ac946d4"
+        "outputId": "a793d644-7205-45ab-ad84-0c0ac97f9171"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -475,7 +520,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 154
+          "execution_count": 7
         }
       ]
     },
@@ -487,7 +532,7 @@
       "metadata": {
         "id": "q_WB9pzcu6yr"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -533,9 +578,9 @@
           "height": 209
         },
         "id": "2uASZOBQmrRM",
-        "outputId": "1d090fdd-83ab-4ce1-e7db-bac28879c284"
+        "outputId": "cccef55a-2538-42b7-9faa-9853f4fce29c"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -564,7 +609,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 123
+          "execution_count": 8
         }
       ]
     }
