Creado mediante Colaboratory

--- a/tablas_distribucion_frecuencia_funcion_grafico.ipynb
+++ b/tablas_distribucion_frecuencia_funcion_grafico.ipynb
@@ -6,7 +6,7 @@
       "name": "tablas_distribucion_frecuencia_funcion",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNmyfPt8Yz4uiQPn0mLEtaZ",
+      "authorship_tag": "ABX9TyO4EaCw2N/8VDg6Arlm5ZF/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -672,8 +672,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#bibliografía https://stackoverflow.com/questions/25447700/annotate-bars-with-values-on-pandas-bar-plots poner valores\n",
-        "#https://www.it-swarm-es.com/es/colors/valor-hexadecimal-argb-transparente/1046332798/ transparencias colores"
+        "#bibliografía https://stackoverflow.com/questions/25447700/annotate-bars-with-values-on-pandas-bar-plots poner valores"
       ],
       "metadata": {
         "id": "Ah_8jNZWlyVd"
