Creado mediante Colaboratory

--- a/Clase_Estadistica_Descriptiva.ipynb
+++ b/Clase_Estadistica_Descriptiva.ipynb
@@ -5,7 +5,14 @@
     "colab": {
       "name": "Clase_Estadistica_Descriptiva",
       "provenance": [],
-      "authorship_tag": "ABX9TyNFYSazODfOWMfYIlSErRvi",
+      "collapsed_sections": [
+        "OMNxTVGdLY-1",
+        "HPnAt8qNNtI7",
+        "7lNebj5POBOd",
+        "96jhnrQROYC9",
+        "SnIVIPVxOj2Z"
+      ],
+      "authorship_tag": "ABX9TyO7YT2C5BHfucZ4YBuMwKfO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -167,6 +174,15 @@
           "execution_count": 9
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Manejo del Data Frame"
+      ],
+      "metadata": {
+        "id": "Sm9LeXb9gdCP"
+      }
     },
     {
       "cell_type": "code",
@@ -591,14 +607,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 424
         },
-        "outputId": "931867df-bf07-446f-8bfc-418882b1529d"
+        "outputId": "7daf199c-2ca0-46a6-dbd6-aeca609c7046"
       },
       "source": [
         "#cambiar nombre de todas columnas\n",
         "datos.columns = ['Id', 'Nombre', 'Edad', 'Clase', 'Sexo', 'Familia','Embarcacion','Sobrevivientes']\n",
         "datos"
       ],
-      "execution_count": 13,
+      "execution_count": 108,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -777,7 +793,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 108
         }
       ]
     },
@@ -789,14 +805,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 424
         },
-        "outputId": "a384ee31-d88e-4f5e-e303-a68ab214867c"
+        "outputId": "06b48642-9a1f-48f0-f00c-10112a69ba47"
       },
       "source": [
         "#eliminar columna\n",
         "datos=datos.drop(['Id'],axis=1)\n",
         "datos"
       ],
-      "execution_count": 15,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -963,7 +979,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 109
         }
       ]
     },
@@ -975,14 +991,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 424
         },
-        "outputId": "a0410555-78f8-4f00-b4d7-ec4a9bff18e1"
+        "outputId": "ae687665-1c37-4a8b-ec78-2b65758fc8b7"
       },
       "source": [
         "#eliminar varias columnas\n",
         "datos=datos.drop(['Nombre',\"Familia\",'Embarcacion'],axis=1)\n",
         "datos"
       ],
-      "execution_count": 16,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1113,7 +1129,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 110
         }
       ]
     },
@@ -1125,12 +1141,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 300
         },
-        "outputId": "87e298f3-be2e-4eec-8a9d-6d342f8dacf0"
+        "outputId": "4eff07ea-5e6a-4118-99f0-024960044f14"
       },
       "source": [
         "datos.describe() #descriptivos"
       ],
-      "execution_count": 17,
+      "execution_count": 111,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1216,7 +1232,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 111
         }
       ]
     },
@@ -1228,12 +1244,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 300
         },
-        "outputId": "671fcbf7-965e-4315-c681-7cea944a0450"
+        "outputId": "e1c74618-7928-4097-84f2-5b845a666b93"
       },
       "source": [
         "datos.describe().round(1) #descriptivos un decimal"
       ],
-      "execution_count": 18,
+      "execution_count": 112,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1319,7 +1335,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 112
         }
       ]
     },
@@ -1329,14 +1345,14 @@
         "id": "6w4BIKQ2l5cm",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 81
+          "height": 112
         },
-        "outputId": "e334d6ee-c96a-4fad-aa18-cbe93520af22"
+        "outputId": "7e174064-1fc8-45f4-ddbb-ab834a6b94ab"
       },
       "source": [
         "datos.describe().round(1).transpose() #descriptivos un decimal y transpuesto"
       ],
-      "execution_count": 24,
+      "execution_count": 113,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1382,17 +1398,29 @@
               "      <td>38.0</td>\n",
               "      <td>80.0</td>\n",
               "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Clase</th>\n",
+              "      <td>714.0</td>\n",
+              "      <td>2.2</td>\n",
+              "      <td>0.8</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>3.0</td>\n",
+              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "      count  mean   std  min   25%   50%   75%   max\n",
-              "Edad  714.0  29.7  14.5  0.4  20.1  28.0  38.0  80.0"
+              "       count  mean   std  min   25%   50%   75%   max\n",
+              "Edad   714.0  29.7  14.5  0.4  20.1  28.0  38.0  80.0\n",
+              "Clase  714.0   2.2   0.8  1.0   1.0   2.0   3.0   3.0"
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 113
         }
       ]
     },
@@ -1404,7 +1432,7 @@
       "metadata": {
         "id": "UZ2fZ5--F2i1"
       },
-      "execution_count": 21,
+      "execution_count": 114,
       "outputs": []
     },
     {
@@ -1414,12 +1442,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1c4e3117-ed17-4954-ca4b-c28813a9c6a3"
+        "outputId": "ebf3a9c5-ceab-4e06-bfe2-fe66677b1d08"
       },
       "source": [
         "datos.info() #vemos que la variable ya es categorica "
       ],
-      "execution_count": 23,
+      "execution_count": 115,
       "outputs": [
         {
           "output_type": "stream",
@@ -1451,9 +1479,9 @@
           "height": 81
         },
         "id": "kYyrrM_FFbtd",
-        "outputId": "2db788ad-4b9e-46a7-cb0d-f1bb9ab07685"
+        "outputId": "327e7e72-d112-4ccb-87e2-2357249f525e"
       },
-      "execution_count": 25,
+      "execution_count": 116,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1509,7 +1537,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 116
         }
       ]
     },
@@ -1527,33 +1555,147 @@
       "metadata": {
         "id": "5CvdUwciyh8A",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 269
         },
-        "outputId": "2ac9335b-4383-418b-e374-305aeb074c9c"
+        "outputId": "e36b3200-4f3c-4567-bc5e-4aac041fc97a"
       },
       "source": [
         "# Medidas de tendencia central\n",
-        "media = datos[\"Edad\"].mean()\n",
-        "mediana = datos[\"Edad\"].median()\n",
-        "moda = datos[\"Edad\"].mode()\n",
-        "print(\"\"\"\n",
-        "    Media: %d\n",
-        "    Mediana: %d\n",
-        "    Moda: %d\n",
-        "\"\"\" % (media,mediana,moda))"
+        "total=len(datos[\"Edad\"]) #largo de la variable\n",
+        "media = datos[\"Edad\"].mean() #media\n",
+        "mediana = datos[\"Edad\"].median() #mediana\n",
+        "moda = datos[\"Edad\"].mode()[0] #moda no se olvide poner el [0]\n",
+        "varianza= datos[\"Edad\"].var(ddof=1) #varianza ddof=0 poblacional ddof=1 muestral\n",
+        "desv_st=datos[\"Edad\"].std(ddof=1) #desviación estandar ddof=0 poblacional ddof=1 muestral\n",
+        "coef_var=(datos[\"Edad\"].std(ddof=1)/ datos[\"Edad\"].mean())*100 #agregar el *100\n",
+        "\n",
+        "#creamos un Data Frame llamado descriptivos_a\n",
+        "descriptivos_a=pd.DataFrame()\n",
+        "descriptivos_a[\"medida\"]=[\"total_datos\",\"media\",\"mediana\",\"moda\",\"varianza\",\"desviacion_estandar\",\"coficiente_variación\"]\n",
+        "descriptivos_a[\"valores\"]=[total,media,mediana,moda,varianza,desv_st,coef_var]\n",
+        "\n",
+        "descriptivos_a.round(1)\n"
       ],
-      "execution_count": 26,
+      "execution_count": 165,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "    Media: 29\n",
-            "    Mediana: 28\n",
-            "    Moda: 24\n",
-            "\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>medida</th>\n",
+              "      <th>valores</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>total_datos</td>\n",
+              "      <td>714.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>media</td>\n",
+              "      <td>29.7</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>mediana</td>\n",
+              "      <td>28.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>moda</td>\n",
+              "      <td>24.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>varianza</td>\n",
+              "      <td>211.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>desviacion_estandar</td>\n",
+              "      <td>14.5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>coficiente_variación</td>\n",
+              "      <td>48.9</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                 medida  valores\n",
+              "0           total_datos    714.0\n",
+              "1                 media     29.7\n",
+              "2               mediana     28.0\n",
+              "3                  moda     24.0\n",
+              "4              varianza    211.0\n",
+              "5   desviacion_estandar     14.5\n",
+              "6  coficiente_variación     48.9"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 165
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "moda = datos[\"Edad\"].mode() #moda"
+      ],
+      "metadata": {
+        "id": "2w_S6ovleGcK"
+      },
+      "execution_count": 159,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "moda"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MW1LaV7KWhwY",
+        "outputId": "30faf238-81ac-4e8a-fac9-1c560f0f7c79"
+      },
+      "execution_count": 160,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    24.0\n",
+              "dtype: float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 160
         }
       ]
     },
@@ -3749,141 +3891,7 @@
     {
       "cell_type": "code",
       "source": [
-        "datos[\"Edad\"].mean()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "xYKtRQwfgxOp",
-        "outputId": "3ba893d0-9bcd-4e97-b9fe-df1a313ee5f2"
-      },
-      "execution_count": 80,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "29.699117647058827"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 80
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "datos[\"Edad\"].mode()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "YYG9FdpTNw56",
-        "outputId": "553b9a56-656b-4eb2-b703-caa965cfa28c"
-      },
-      "execution_count": 81,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0    24.0\n",
-              "dtype: float64"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 81
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#varianza ddof=0 poblacional ddof=1 muestral\n",
-        "datos[\"Edad\"].var(ddof=1) "
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "c-Ztr_MiWheq",
-        "outputId": "8649e488-f472-4f21-9fe2-585143f947f7"
-      },
-      "execution_count": 82,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "211.0191247463081"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 82
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        " #desviación estandar ddof=0 poblacional ddof=1 muestral\n",
-        "datos[\"Edad\"].std(ddof=1)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "vzc8HeMZaIF5",
-        "outputId": "47d1e282-84d4-4f05-c83b-6a2189d5c9cb"
-      },
-      "execution_count": 83,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "14.526497332334044"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 83
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#coeficiente de variación\n",
-        "datos[\"Edad\"].std(ddof=1) / datos[\"Edad\"].mean()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "5D12-OwIakmq",
-        "outputId": "c19bd5a1-1c08-4fdd-daf5-817715e9695b"
-      },
-      "execution_count": 84,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.48912218554656745"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 84
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "len(datos[\"Edad\"])"
+        ""
       ],
       "metadata": {
         "colab": {
@@ -4263,7 +4271,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 334
+          "height": 314
         },
         "id": "L3vTIzG0aMbQ",
         "outputId": "03b1234e-d082-4965-978d-17c71c0dc0a2"
@@ -4301,7 +4309,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 334
+          "height": 314
         },
         "id": "UZyWQv7hbNo3",
         "outputId": "ef792526-944c-4c2b-b04d-97a28456bdf3"
@@ -4339,7 +4347,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 409
+          "height": 389
         },
         "id": "cKFdbTytbQeK",
         "outputId": "e0997df4-6cfb-4fc5-a4c1-eeaef8284817"
@@ -4379,7 +4387,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 368
+          "height": 348
         },
         "id": "dMNa7IwSPfm6",
         "outputId": "664505d9-7ae7-40b5-f61c-cb411e7041dd"
