Creado mediante Colaboratory

--- a/tablas_distribucion_frecuencia_funcion_grafico.ipynb
+++ b/tablas_distribucion_frecuencia_funcion_grafico.ipynb
@@ -6,7 +6,7 @@
       "name": "tablas_distribucion_frecuencia_funcion",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO4EaCw2N/8VDg6Arlm5ZF/",
+      "authorship_tag": "ABX9TyNKPgurlqhUlYhqNS4Nn2zv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,8 +29,29 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "<div style=\"\">\n",
+        "   <h1>Clase Análisis de datos cualitativos </h1>\n",
+        "   <h4>Tablas de frecuencia<br>Armando Valdés López<br>Enero 2022</h4>\n",
+        "</div>\n",
+        "<br>\n",
+        "\n",
+        "</div>\n",
+        "<div style=\"float:left;\">\n",
+        " <img src=\"https://pbs.twimg.com/profile_images/877925978361794564/uF8MEWoP_400x400.jpg\"\n",
+        "        width=\"60\"  style=\"\" />\n",
+        "</div>\n",
+        "</div>\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "-mfajevkbmsz"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": null,
       "metadata": {
         "id": "r-GAgqzXmFQ4"
       },
@@ -58,7 +79,7 @@
         "id": "vHbN0fjYmRDd",
         "outputId": "8f8b8dc3-824e-48b7-961e-60ce01d09f0a"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -208,7 +229,7 @@
       "metadata": {
         "id": "Zn-QZBQcmUKE"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -224,7 +245,7 @@
         "id": "g5eHR5UaOYKY",
         "outputId": "010368e8-9a9e-49c9-d1be-f5582852c494"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -323,7 +344,7 @@
       "metadata": {
         "id": "MWjptAGZjTEp"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -338,7 +359,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -392,7 +413,7 @@
       "metadata": {
         "id": "H246vOcURuVx"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -406,7 +427,7 @@
       "metadata": {
         "id": "ynly7LIDr7ei"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -422,7 +443,7 @@
         "id": "IjxEJmN4s3ao",
         "outputId": "df8d6f99-2e50-45e9-c6a9-9e76adc7c5ca"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -570,7 +591,7 @@
           "height": 597
         }
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -677,7 +698,7 @@
       "metadata": {
         "id": "Ah_8jNZWlyVd"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -725,7 +746,7 @@
         "id": "2uASZOBQmrRM",
         "outputId": "e55e1b26-9144-4adc-97bb-a0a67a0bd57a"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
